<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linear_purchase"
    android:background="@color/blue_50"
   >

    <ScrollView
        android:id="@+id/scrollableContents"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >


       <!-- <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/clear_button"
            android:layout_marginLeft="10dp"
            android:id="@+id/cancel"/>-->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0.173dp">

        <EditText
            android:id="@+id/pur_dialog_itemCode"
            android:ems="3"
            android:paddingTop="0dp"
            android:layout_width="match_parent"
            android:layout_gravity="start"
            android:inputType="text|number"
            android:maxLength="15"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/hint_prchDialog_code">
        </EditText>
    </android.support.design.widget.TextInputLayout>

     <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="0.173dp">

                <EditText
                    android:id="@+id/pur_dialog_itemName"
                    android:layout_width="match_parent"
                    android:layout_gravity="start"
                    android:paddingTop="0dp"
                    android:ems="3"
                    android:maxLength="20"
                    android:inputType="textAutoCorrect|text"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_partyDialog_name">
                </EditText>
     </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="0.173dp">

                <EditText
                    android:id="@+id/pur_dialog_rate"
                    android:layout_width="match_parent"
                    android:paddingTop="0dp"
                    android:layout_centerVertical="true"
                    android:ems="3"
                    android:maxLength="9"
                    android:inputType="numberDecimal"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:hint="@string/purDialog_rate">
                </EditText>
            </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0.173dp">

        <EditText
            android:id="@+id/pur_dialog_quty"
            android:layout_gravity="start"
            android:ems="3"
            android:paddingTop="0dp"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/purDialog_quty">
        </EditText>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0.173dp">

        <EditText
            android:id="@+id/purcDialog_discs"
            android:layout_width="match_parent"
            android:paddingTop="0dp"
            android:layout_centerVertical="true"
            android:ems="3"
            android:inputType="number"
            android:maxLength="2"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="@string/purDialog_disc">
        </EditText>
    </android.support.design.widget.TextInputLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialogstatus"
                android:visibility="gone"/>

    <Button
        android:id="@+id/save_btn_dialogPur"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:background="@drawable/round_corner"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:text="Save">
    </Button>
        </LinearLayout>

</ScrollView>

</LinearLayout>